# DRDemo

./: CMakeLists.txt  README.md  main.cpp
accelerators/: bvh.cpp  bvh.hpp
autodiff/: diffobject.hpp  fad.hpp  rad.hpp
camera/: perspective_camera.cpp  perspective_camera.hpp  pinhole_camera.cpp  pinhole_camera.hpp
camera_points/: dragon_positions.txt  normal_camera.txt  sphere_view_points_1k_perspective_700_wlop_ordered_rotated.xyz  up_hemi_dragon.txt  up_hemisphere.txt
core/: bbox.cpp  bbox.hpp  camera.hpp  common.hpp  film.cpp  film.hpp  geometry.hpp  integrator.hpp  interaction.hpp  light.hpp  lodepng.cpp  lodepng.hpp  renderer.hpp  scene.cpp  scene.hpp  shape.hpp  spectrum.hpp  tonemapper.hpp
dinoSparseRing/: dinoSR_inv_mat.txt  dinoSR_par.txt  dinoSR_pseudo_inv.txt
film/: box_film.cpp  box_film.hpp
geometry/: geometry.hpp
integrator/: direct_integrator.cpp  direct_integrator.hpp
light/: SH_light.cpp  SH_light.hpp  ambient_light.cpp  ambient_light.hpp  directional_light.cpp  directional_light.hpp  point_light.cpp  point_light.hpp
minimization/: gradient_descent.cpp  gradient_descent.hpp  multi_view_energy.cpp  multi_view_energy.hpp  reconstruction_energy.cpp  reconstruction_energy.hpp  reconstruction_energy_light.cpp  reconstruction_energy_light.hpp  reconstruction_energy_opt.cpp  reconstruction_energy_opt.hpp  scalar_function.cpp  scalar_function.hpp
old/: main.cpp
old/autodiff/: diffobject.hpp  fad.hpp  rad.hpp
old/raytracing/: intersection.hpp  ray.hpp  shape.hpp  sphere.cpp  sphere.hpp
old/utils/: common.hpp  promote.hpp  vector.hpp
output/blob/: output.txt
output/blob2/: output.txt
output/bunny_SH_smooth/: output.txt
output/cube/: output.txt
output/dino_2/: output.txt
output/dino_normalized_grad/: output.txt
output/full_pipeline_test/: output.txt
output/monkey/: output.txt
output/monkey2/: output.txt
output/res_comparison/start_10/: output.txt
output/res_comparison/start_5/: output.txt
output/torus/: output.txt
output/torus2/: output.txt
output_final/blob/: output.txt
output_final/blob_10_2/: output.ply  output.sdf  output.txt
output_final/blob_10_4/: output.ply  output.txt
output_final/bunny/: output.ply  output.txt
output_final/bunny_sh_1_4_3/: output.ply  output.txt
output_final/cube/: output.sdf  output.txt
output_final/full_dragon/: output.txt
output_final/torus/: output.sdf  output.txt
rad/: derivative.cpp  derivative.hpp  diff_object.hpp  rad.cpp  rad.hpp
raytracing/: image.hpp  ray.hpp  sphere.cpp
renderer/: simple_renderer.cpp  simple_renderer.hpp
sdfs/: bunny_smooth.sdf  dino_watertight_low.sdf
shapes/: grid.cpp  grid.hpp  mac_grid.cpp  mac_grid.hpp  sphere.cpp  sphere.hpp  triangle_mesh.cpp  triangle_mesh.hpp
tests/: armadillo_render.cpp  armadillo_render.hpp  bunny_test.cpp  bunny_test.hpp  dino_test.cpp  dino_test.hpp  dragon_full_pipeline_test.cpp  dragon_full_pipeline_test.hpp  dragon_render.cpp  dragon_render.hpp  geom_sphere.cpp  geom_sphere.hpp  sdf_loading_render_test.cpp  sdf_loading_render_test.hpp  sdf_sphere.cpp  sdf_sphere.hpp  test_common.cpp  test_common.hpp  torus_test.cpp  torus_test.hpp
tonemapper/: clamp_tonemapper.cpp  clamp_tonemapper.hpp
utilities/: iofile.cpp  iofile.hpp  tape_storage.hpp  vector.hpp
utils/: ifthenelse.hpp  promote.hpp  vector.hpp
